--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
 <h1>Peer Grading Tool PGT</h1>
 (Eduard Klein, eduard.klein@bfh.ch, 26.06.2022)
-    <p>
+<strong>
+ Vorbemerkung (12.12.2022): Seit Dezember 2022 steht das im folgenden beschriebene Tool 
+ als Onlineversion zur Verfügung. Die folgende Beschreibung wird demnächst entsprechend
+ aktualisiert.
+</strong>
+ 
+ <p>
         Bei Gruppenarbeiten tragen im Idealfall alle Teammitglieder in gleichem Ausmass zum Gesamterfolg des Projektes bei, meist aber auf individuell unterschiedliche Weise. “Peer Evaluation” resp. “Peer Grading” dient dazu individuelle Beiträge in Gruppenarbeiten zu bewerten ([Kaufman et.al. 1999], [Brutus & Donia 2010]). Dabei bewertet jedes Gruppenmitglied nach definierbaren Kriterien sowohl alle anderen Gruppenmitglieder (Fremdeinschätzung) als auch sich selbst (Selbsteinschätzung). Die Ergebnisse werden innerhalb jedes Teams anonymisiert zur Verfügung gestellt. Das Ergebnis einer gegenseitigen Bewertung anhand verschiedener Kriterien lässt eine differenzierte Beurteilung der Selbst- bzw. Fremdeinschätzung sowie die eigene Positionierung innerhalb der Gruppe zu. Peer Grading ermöglicht so einen reflektierenden Blick auf den eigenen Beitrag.
     </p>
     
