--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 <h1>Peer Grading Tool PGT</h1>
 (Eduard Klein, eduard.klein@bfh.ch, 26.06.2022)
-<strong>
+<p />
+<strong style="color: red">
  Vorbemerkung (12.12.2022): Seit Dezember 2022 steht das im folgenden beschriebene Tool 
  als Onlineversion zur Verfügung. Die folgende Beschreibung wird demnächst entsprechend
  aktualisiert.
