--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Both the instructor and the participants can use their respective evaluations to
 <br />
 Comparable peer grading tools are either only commercially available with a licensing model (e.g., <a href="https://info.catme.org/features/peer-evaluation/">CATME from Purdue University</a>), or have limitations such as requiring participants to have a Google account (<a href="https://workspace.google.com/marketplace/app/peergrading_tool/815094938046">peer grading tool as a plugin for Google Spreadsheets</a>), which does not go along with the idea of an open software system.
 <p />
-The Moodle activity "Mutual Assessment" is similar to the desired peer grading scenario. However, analysis has shown that essential aspects that are realized in the PGT tool regarding functionality, level of detail, flexibility and customization are not available. Thus, the PGT tool was implemented in December 2022 as an in-house development at the <a href="https://www.bfh.ch/wirtschaft/">Dep. of Business of the Bern Univ. of Applied Sciences (BUAS)</a> with Angular technology resulting in a web based application, funded by the 
+The Moodle activity "Workshop" is similar to the desired peer grading scenario. However, analysis has shown that essential aspects that are realized in the PGT tool regarding functionality, level of detail, flexibility and customization are not available. Thus, the PGT tool was implemented in December 2022 as an in-house development at the <a href="https://www.bfh.ch/wirtschaft/">Dep. of Business of the Bern Univ. of Applied Sciences (BUAS)</a> with Angular technology resulting in a web based application, funded by the 
 <a href="https://virtuelleakademie.ch/foerderung/">BFH E-Learning Förderprogramm</a>. 
 <p />
 
