--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <strong>Note for lecturers:</strong>
 If you are interested in using PGT, please contact author (see below)
 <p />
+<a href="version.html">version information</a>
+<p />
 <strong>1 General</strong>
 <br />
 In group work, ideally all members contribute equally to the overall success of the project, but usually in individually different ways. Peer grading is used to evaluate individual contributions in group work ([Kaufman et.al. 1999], [Brutus & Donia 2010]), in our context the online tool PGT is used for this purpose. Each group member grades all other group members (peer grading) as well as himself/herself (self-grading) according to definable criteria and receives an evaluation in the form of an anonymized comparison. The evaluations are done with a point scale according to definable weighted criteria.
