--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <strong>Note for lecturers:</strong>
 If you are interested in using PGT, please contact author (see below)
 <p />
-<a href="version.html">version information</a>
+<a href="version.html">&raquo; version information</a>
 <p />
 <strong>1 General</strong>
 <br />
