--- a/version.html
+++ b/version.html
@@ -9,10 +9,16 @@
 <h2>Peer Grading Tool PGT / Version Information</h2>
 
 <tt><pre>
+20 September:
+- Localization: peer grading campaigns in English or German (students' view)
+- extended admin view (campaign summaries)  
+15 August 2023:
+- export detailed student input grades to lecturers' group summaries
+- beautifying excel exports (better readability)
 17 July 2023:
 - excel export of participants' peer grading results
 - reminder function for defaulting participants, even after peer grading campaign's end
-- bug fixing (ghost mailing, pdf export)  
+- bug fixing (ghost mailing, pdf export)
 </pre></tt>
 
 <hr />
