Update version.html with changes from dec 23 - jan 24

--- a/version.html
+++ b/version.html
@@ -9,7 +9,12 @@
 <h2>Peer Grading Tool PGT / Version Information</h2>
 
 <tt><pre>
-20 September:
+31 January 2024:
+- more flexibility in peer grading process
+- decoupling of setting up a peer grading campaign from carrying out a campaign
+- flexible campaign start and end
+- imported peer grading participants' data can be edited
+20 September 2023:
 - Localization: peer grading campaigns in English or German (students' view)
 - extended admin view (campaign summaries)  
 15 August 2023:
