Update index.html / due to Jan24-changes

--- a/index.html
+++ b/index.html
@@ -15,31 +15,52 @@ If you are interested in using PGT, please contact author (see below)
 <p />
 <strong>1 General</strong>
 <br />
-In group work, ideally all members contribute equally to the overall success of the project, but usually in individually different ways. Peer grading is used to evaluate individual contributions in group work ([Kaufman et.al. 1999], [Brutus & Donia 2010]), in our context the online tool PGT is used for this purpose. Each group member grades all other group members (peer grading) as well as himself/herself (self-grading) according to definable criteria and receives an evaluation in the form of an anonymized comparison. The evaluations are done with a point scale according to definable weighted criteria.
+In group work, ideally all members contribute equally to the overall success of the project, but usually in individually different ways. 
+  Peer grading is used to evaluate individual contributions in group work ([Kaufman et.al. 1999], [Brutus & Donia 2010]), 
+  in our context the online tool PGT is used for this purpose. 
+  Each group member grades all other group members (peer grading) as well as himself/herself (self-grading) 
+  according to definable criteria and receives an evaluation in the form of an anonymized comparison. 
+  The evaluations are done with a point scale according to definable weighted criteria.
 <p />
-A lecturer (resp. teacher or instructor) can configure a peer grading process with regard to the number and designation of the criteria, their weighting and the point scale, as well as the start and end date for the period of the process. After the peer grading process, the lecturer receives a mail notification with all individual and group evaluations. This allows the lecturer to compare his assessment of the group contribution of individual group members with the peer evaluations.
+A lecturer (resp. teacher or instructor) can configure a peer grading  with regard to the number 
+  and designation of the criteria, their weighting and the point scale, as well as the start and end date 
+  for the period of the . After the peer grading , the lecturer receives a mail notification 
+  with all individual and group evaluations. 
+  This allows the lecturer to compare his assessment of the group contribution of individual group members with the peer evaluations.
 <p />
-Both the instructor and the participants can use their respective evaluations to reflect on the teaching and learning process and benefit from them for further group work.
+Both the instructor and the participants can use their respective evaluations to reflect on the teaching and learning  
+  and benefit from them for further group work.
 <p />
 
 <strong>2 Other Peer Grading Tools</strong>
 <br />
-Comparable peer grading tools are either only commercially available with a licensing model (e.g., <a href="https://info.catme.org/features/peer-evaluation/">CATME from Purdue University</a>), or have limitations such as requiring participants to have a Google account (<a href="https://workspace.google.com/marketplace/app/peergrading_tool/815094938046">peer grading tool as a plugin for Google Spreadsheets</a>), which does not go along with the idea of an open software system.
+Comparable peer grading tools are either only commercially available with a licensing model 
+  (e.g., <a href="https://info.catme.org/features/peer-evaluation/">CATME from Purdue University</a>), 
+  or have limitations such as requiring participants to have a Google account 
+  (<a href="https://workspace.google.com/marketplace/app/peergrading_tool/815094938046">peer grading tool as a plugin for Google Spreadsheets</a>), 
+  which does not go along with the idea of an open software system.
 <p />
-The Moodle activity "Workshop" is similar to the desired peer grading scenario. However, analysis has shown that essential aspects that are realized in the PGT tool regarding functionality, level of detail, flexibility and customization are not available. Thus, the PGT tool was implemented in December 2022 as an in-house development at the <a href="https://www.bfh.ch/wirtschaft/">Dep. of Business of the Bern Univ. of Applied Sciences (BUAS)</a> with Angular technology resulting in a web based application, funded by the 
+The Moodle activity "Workshop" is similar to the desired peer grading scenario. However, 
+  analysis has shown that essential aspects that are realized in the PGT tool regarding functionality, 
+  level of detail, flexibility and customization are not available. Thus, the PGT tool was implemented 
+  in December 2022 as an in-house development at the <a href="https://www.bfh.ch/wirtschaft/">Dep. of 
+    Business of the Bern Univ. of Applied Sciences (BUAS)</a> with Angular technology resulting 
+  in a web based application, funded by the 
 <a href="https://virtuelleakademie.ch/foerderung/">BFH E-Learning Förderprogramm</a>. 
 <p />
 
 <strong>3 Functionality</strong>
 <br />
-<strong>a)</strong> Creation of a peer grading process by the lecturer incl. import of participants in shape of a csv file with participant name, (unique!) matriculation number, email, and group number.
+<strong>a)</strong> Creation of a peer grading process by the lecturer incl. import of participants 
+  in shape of a (UTF-8) csv file with participant name, (optional) matriculation number, email address, and group number.
 <br />
     <!--
 <img src="images/Screenshots-for-About-Page_01_Kampagne-erstellen_part-1.png" style="border: 1px solid" /> -->
 <div style="border: 1px solid; width: 600px">
 <img src="images/Screenshots-for-About-Page_01_Kampagne-erstellen_part-1.png" style="width: 600px" /><br />
 <img src="images/Screenshots-for-About-Page_01_Kampagne-erstellen_part-2.png" style="width: 600px" /><br />
-<img src="images/Screenshots-for-About-Page_01_Kampagne-erstellen_part-3.png" style="width: 600px" />
+<!--<img src="images/Screenshots-for-About-Page_01_Kampagne-erstellen_part-3.png" style="width: 600px" />
+-->
 </div>
 <p />
 
@@ -48,7 +69,7 @@ The Moodle activity "Workshop" is similar to the desired peer grading scenario. 
 <img src="images/PG-from-Everdeen.PNG" style="border: 1px solid; width: 600px"/>
 <p />
 
-<strong>c)</strong> Upon completion of the peer grading process, all participants and the instructor receive evaluations via email.
+<strong>c)</strong> Upon completion of the peer grading , all participants and the instructor receive evaluations via email.
 <br />
 <img src="images/PG-Gruppen-Auswertung.PNG" style="border: 1px solid; width: 600px"/>
 <p />
