--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ Both the instructor and the participants can use their respective evaluations to
 Comparable peer grading tools are either only commercially available with a licensing model 
   (e.g., <a href="https://info.catme.org/features/peer-evaluation/">CATME from Purdue University</a>), 
   or have limitations such as requiring participants to have a Google account 
-  (<a href="https://workspace.google.com/marketplace/app/peergrading_tool/815094938046">peer grading tool as a plugin for Google Spreadsheets</a>), 
+  (<a href="https://workspace.google.com/marketplace/app/peergrading_tool/815094938046">peer 
+    grading tool as a plugin for Google Spreadsheets</a>), 
   which does not go along with the idea of an open software system.
 <p />
 The Moodle activity "Workshop" is similar to the desired peer grading scenario. However, 
@@ -52,7 +53,8 @@ The Moodle activity "Workshop" is similar to the desired peer grading scenario. 
 <strong>3 Functionality</strong>
 <br />
 <strong>a)</strong> Creation of a peer grading process by the lecturer incl. import of participants 
-  in shape of a (UTF-8) csv file with participant name, (optional) matriculation number, email address, and group number.
+  in shape of a (UTF-8) csv file with participant name, (optional) matriculation number, email address, 
+  and group number.
 <br />
     <!--
 <img src="images/Screenshots-for-About-Page_01_Kampagne-erstellen_part-1.png" style="border: 1px solid" /> -->
@@ -64,25 +66,41 @@ The Moodle activity "Workshop" is similar to the desired peer grading scenario. 
 </div>
 <p />
 
-<strong>b)</strong> Each group member receives an email with a link to the individualized peer grading sheet and fills it out completely (input values are validated).
+<strong>b)</strong> Each group member receives an email with a link to the 
+  individualized peer grading sheet and fills it out completely (input values are validated).
 <br />
-<img src="images/PG-from-Everdeen.PNG" style="border: 1px solid; width: 600px"/>
+<img src="images/abb-3_pg-form-3-Katness-Everdeen.png" style="border: 1px solid; width: 600px"/>
 <p />
 
-<strong>c)</strong> Upon completion of the peer grading , all participants and the instructor receive evaluations via email.
+<strong>c)</strong> Upon completion of the peer grading , all participants and the instructor 
+  receive evaluations via email.
 <br />
-<img src="images/PG-Gruppen-Auswertung.PNG" style="border: 1px solid; width: 600px"/>
+<img src="images/abb-4_overview-over-grp-1.PNG" style="border: 1px solid; width: 600px"/>
 <p />
-<img src="images/PG-Review-Everdeen.PNG" alt="PG-Review-Everdeen.PNG" style="border: 1px solid; width: 600px"/>
+<img src="images/abb-5_pg-auswertung-3-Katness-Everdeen.PNG" alt="PG-Review-Everdeen.PNG" style="border: 1px solid; width: 600px"/>
 <p />
-In this example, the peer grading is based on 4 criteria with points 1..8. The documentation with the meaning of the criteria and the point scales is outside the PGT system and is to be made known to the participants by other means (see example for criteria catalog below). The evaluations of one's own contributions by other group members are anonymized to the extent that only the mean value of all third-party evaluations is given and thus exact conclusions about evaluating persons are not possible.
+In this example, the peer grading is based on 4 criteria with points 1..8. 
+  The documentation with the meaning of the criteria and the point scales is outside the 
+  PGT system and is to be made known to the participants by other means 
+  (see example for criteria catalog below). The evaluations of one's own contributions 
+  by other group members are anonymized to the extent that only the mean value of all third-party 
+  evaluations is given and thus exact conclusions about evaluating persons are not possible.
 <p />
-The group average is calculated by averaging all third-party assessments within a group. For each group member, the deviation between the group average and the average of the third-party assessments of the individual group member can be determined from this. In the evaluation section, the difference between self-assessment and third-party assessment is also shown, which enables critical reflection also with regard to future teamwork. The group average is calculated by averaging all third-party assessments within a group.
+The group average is calculated by averaging all third-party assessments within a group. 
+  For each group member, the deviation between the group average and the average of the third-party 
+  assessments of the individual group member can be determined from this. In the evaluation section, 
+  the difference between self-assessment and third-party assessment is also shown, which enables critical 
+  reflection also with regard to future teamwork. The group average is calculated by averaging all third-party 
+  assessments within a group.
 <p />
 
 <strong>4 Criteria catalog</strong>
 <br />
-It is by decision not presented by the PGT system, since it is usually available as a semi-structured document and would have to be imported or entered in a time-consuming complex manner. Here is an example from the course <a href="https://showroom-bsc.digisus-lab.ch/">Business Case Studies" (BCS)</a> in the Department of Business at the Bern University of Applied Sciences. It is presented in the study guide of the course. The standard score for a "good" assessment is set at 5/6 points.
+It is by decision not presented by the PGT system, since it is usually available as a semi-structured 
+  document and would have to be imported or entered in a time-consuming complex manner. 
+  Here is an example from the course <a href="https://showroom-bsc.digisus-lab.ch/">Business Case Studies" 
+    (BCS)</a> in the Department of Business at the Bern University of Applied Sciences. 
+  It is presented in the study guide of the course. The standard score for a "good" assessment is set at 5/6 points.
 <br />
 <hr />   
 <pre>
