--- a/index.html
+++ b/index.html
@@ -105,10 +105,19 @@ It is by decision not presented by the PGT system, since it is usually available
 <hr />   
 <pre>
 Kriterium "Teamfähigkeit":
-8/7: aussergewöhnlicher Beitrag zum Gruppenprozess; „Macher/in“; bringt pro-aktiv Projektziele voran; ist äusserst engagiert; „opfert“ sich für Projekterfolg; leistet wesentlich mehr als erwartet; Meinungsbildner; hohe Kommunikationskompetenz.
-6/5: engagiertes Mitglied, Beitrag nicht zu hoch, nicht zu niedrig; nimmt mit durchschnittlichem Verantwortungsbewusstsein am Gruppenprozess teil; hat integrierende Wirkung bei Konflikten.
-4/3: liefert Beiträge auf Verlangen; neutrale Haltung zum Projekterfolg; nimmt bei „Durchhängern“ im Team keine motivierenden Vorstösse vor.
-2/1: Unproduktive bis kontraproduktive Haltung; trägt nicht zum Gelingen des Projekts bei bzw. behindert/verhindert dessen Vorankommen. Destruktive Ausstrahlung
+8/7: aussergewöhnlicher Beitrag zum Gruppenprozess; 
+     „Macher/in“; bringt pro-aktiv Projektziele voran; 
+     ist äusserst engagiert; „opfert“ sich für Projekterfolg; 
+     leistet wesentlich mehr als erwartet; Meinungsbildner; 
+     hohe Kommunikationskompetenz.
+6/5: engagiertes Mitglied, Beitrag nicht zu hoch, nicht zu niedrig; 
+     nimmt mit durchschnittlichem Verantwortungsbewusstsein am Gruppenprozess teil; 
+     hat integrierende Wirkung bei Konflikten.
+4/3: liefert Beiträge auf Verlangen; neutrale Haltung zum Projekterfolg; 
+     nimmt bei „Durchhängern“ im Team keine motivierenden Vorstösse vor.
+2/1: Unproduktive bis kontraproduktive Haltung; 
+     trägt nicht zum Gelingen des Projekts bei bzw. behindert/verhindert dessen Vorankommen. 
+     Destruktive Ausstrahlung
 
 Kriterium "Qualität der Beiträge":
 8/7: deutlich über der erwarteten Qualität.
@@ -123,10 +132,18 @@ Kriterium "Quantität der Beiträge":
 2/1: unzureichende Quantität.
 
 Kriterium "Zuverlässigkeit":
-8/7: nimmt Termine ernst, bei Verhinderung bzw. Versäumnis aktive Suche nach Stellvertretung bzw. Alternativen; bietet Ersatz für Versäumtes; achtet auf Einhaltung des Gesamtplans, gibt ggf. korrigierende Impulse.
-6/5: meist zuverlässig, passt sich allerdings eventuell schwankender Teamhaltung an; wenig ausgeprägtes Streben nach Pensenausgleich, falls (z.B. nach Abwesenheit) geringe Aufgabenzuteilung vorliegt; Hinweise auf eventuelle Defizite im Projekt werden ab und zu gegeben. 
-4/3: mehrfaches Fehlen bzw. Nicht-Erledigen von Aufgaben; keine oder verspätete Abmeldung; nur in seltenen Fällen sind Hinweise auf eventuelle Defizite im Projekt zu erwarten.
-2/1: unzuverlässig, kaum mit erfolgskritischen Aufgaben beauftragbar; (fast) keine Kommunikation bei Ausfällen erkennbar.
+8/7: nimmt Termine ernst, bei Verhinderung bzw. Versäumnis aktive Suche 
+     nach Stellvertretung bzw. Alternativen; bietet Ersatz für Versäumtes; 
+     achtet auf Einhaltung des Gesamtplans, gibt ggf. korrigierende Impulse.
+6/5: meist zuverlässig, passt sich allerdings eventuell schwankender Teamhaltung an; 
+     wenig ausgeprägtes Streben nach Pensenausgleich, 
+     falls (z.B. nach Abwesenheit) geringe Aufgabenzuteilung vorliegt; 
+     Hinweise auf eventuelle Defizite im Projekt werden ab und zu gegeben. 
+4/3: mehrfaches Fehlen bzw. Nicht-Erledigen von Aufgaben; 
+     keine oder verspätete Abmeldung; 
+     nur in seltenen Fällen sind Hinweise auf eventuelle Defizite im Projekt zu erwarten.
+2/1: unzuverlässig, kaum mit erfolgskritischen Aufgaben beauftragbar; 
+     (fast) keine Kommunikation bei Ausfällen erkennbar.
 </pre>    
 <hr />
     
@@ -142,6 +159,6 @@ https://www.researchgate.net/publication/2450650_Peer_Ratings_in_Cooperative_Lea
 </li>
 </ul>
 <hr />
-Author: <a href="https://www.bfh.ch/de/eduard-klein">Eduard Klein</a> / Jan 18, 2023
+Author: <a href="https://www.bfh.ch/de/eduard-klein">Eduard Klein</a> / Jan 26, 2024
 
 </body></html>
