--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@ The group average is calculated by averaging all third-party assessments within 
   assessments within a group.
 <p />
 
+<strong>d)</strong> The lecturer has control over the 
+  peer grading process at any time:
+<p />
+<img src="images/abb-2-2_overview_after-invitations-sent.png" alt="abb-2-2_overview_after-invitations-sent.png" style="border: 1px solid; width: 600px"/>
+
+<p />
+
+  
 <strong>4 Criteria catalog</strong>
 <br />
 It is by decision not presented by the PGT system, since it is usually available as a semi-structured 
