--- a/index.html
+++ b/index.html
@@ -112,46 +112,47 @@ It is by decision not presented by the PGT system, since it is usually available
 <br />
 <hr />   
 <pre>
-Kriterium "Teamfähigkeit":
-8/7: aussergewöhnlicher Beitrag zum Gruppenprozess; 
-     „Macher/in“; bringt pro-aktiv Projektziele voran; 
-     ist äusserst engagiert; „opfert“ sich für Projekterfolg; 
-     leistet wesentlich mehr als erwartet; Meinungsbildner; 
-     hohe Kommunikationskompetenz.
-6/5: engagiertes Mitglied, Beitrag nicht zu hoch, nicht zu niedrig; 
-     nimmt mit durchschnittlichem Verantwortungsbewusstsein am Gruppenprozess teil; 
-     hat integrierende Wirkung bei Konflikten.
-4/3: liefert Beiträge auf Verlangen; neutrale Haltung zum Projekterfolg; 
-     nimmt bei „Durchhängern“ im Team keine motivierenden Vorstösse vor.
-2/1: Unproduktive bis kontraproduktive Haltung; 
-     trägt nicht zum Gelingen des Projekts bei bzw. behindert/verhindert dessen Vorankommen. 
-     Destruktive Ausstrahlung
+Criterion "teamwork":
+8/7: Exceptional contribution to the group process; "doer"; 
+	 proactively advances project goals; is extremely committed; 
+	 "sacrifices" himself/herself for project success; 
+	 accomplishes much more than expected; opinion leader; 
+	 high communication skills.
+6/5: Committed member, contribution not too high, not too low; 
+	 participates in the group process with an average sense of responsibility; 
+	 has an integrating effect in conflicts.
+4/3: Provides contributions on demand; neutral attitude towards project success; 
+	 does not make motivational advances when there are "sags" in the team.
+2/1: Unproductive to counterproductive attitude; 
+	 does not contribute to the success of the project or hinders/prevents its progress. 
+	 Destructive charisma.
 
-Kriterium "Qualität der Beiträge":
-8/7: deutlich über der erwarteten Qualität.
-6/5: entspricht der erwarteten Qualität.
-4/3: weniger als die erwartete Qualität.
-2/1: unzureichende Qualität.
+Criterion "Quality of contributions":
+8/7: Well above the expected quality.
+6/5: Corresponds to the expected quality.
+4/3: Less than the expected quality.
+2/1: Insufficient quality.
 
-Kriterium "Quantität der Beiträge":
-8/7: deutlich über der erwarteten Quantität.
-6/5: entspricht der erwarteten Quantität.
-4/3: weniger als die erwartete Quantität.
-2/1: unzureichende Quantität.
+Criterion "Quantity of contributions":
+8/7: Well above the expected quantity.
+6/5: Corresponds to the expected quantity.
+4/3: Less than the expected quantity.
+2/1: Insufficient quantity.
 
-Kriterium "Zuverlässigkeit":
-8/7: nimmt Termine ernst, bei Verhinderung bzw. Versäumnis aktive Suche 
-     nach Stellvertretung bzw. Alternativen; bietet Ersatz für Versäumtes; 
-     achtet auf Einhaltung des Gesamtplans, gibt ggf. korrigierende Impulse.
-6/5: meist zuverlässig, passt sich allerdings eventuell schwankender Teamhaltung an; 
-     wenig ausgeprägtes Streben nach Pensenausgleich, 
-     falls (z.B. nach Abwesenheit) geringe Aufgabenzuteilung vorliegt; 
-     Hinweise auf eventuelle Defizite im Projekt werden ab und zu gegeben. 
-4/3: mehrfaches Fehlen bzw. Nicht-Erledigen von Aufgaben; 
-     keine oder verspätete Abmeldung; 
-     nur in seltenen Fällen sind Hinweise auf eventuelle Defizite im Projekt zu erwarten.
-2/1: unzuverlässig, kaum mit erfolgskritischen Aufgaben beauftragbar; 
-     (fast) keine Kommunikation bei Ausfällen erkennbar.
+Criterion "Reliability":
+8/7: Takes appointments seriously, actively seeks substitutes or alternatives 
+	 if unable to attend or misses appointments; offers substitutes for what 
+	 has been missed; ensures that the overall plan is adhered to, 
+	 provides corrective impetus if necessary.
+6/5: Mostly reliable, but adapts to possibly fluctuating team attitude; 
+	 little pronounced striving for workload compensation 
+	 if (e.g. after absence) there is a low allocation of tasks; 
+	 hints at possible deficits in the project are given from time to time.
+4/3: Multiple absences or failure to complete tasks; no or late sign-off; 
+	 only in rare cases are indications of possible deficits in the project 
+	 to be expected.
+2/1: Unreliable, can hardly be entrusted with tasks critical to success; 
+	 (almost) no communication recognizable in case of failures.
 </pre>    
 <hr />
     
@@ -167,6 +168,6 @@ https://www.researchgate.net/publication/2450650_Peer_Ratings_in_Cooperative_Lea
 </li>
 </ul>
 <hr />
-Author: <a href="https://www.bfh.ch/de/eduard-klein">Eduard Klein</a> / Jan 26, 2024
+Author: <a href="https://www.bfh.ch/de/eduard-klein">Eduard Klein</a> / Feb 29, 2024
 
 </body></html>
