--- a/version.html
+++ b/version.html
@@ -9,6 +9,10 @@
 <h2>Peer Grading Tool PGT / Version Information</h2>
 
 <tt><pre>
+15 April 2024:
+ - Localization: currently in English & German
+ - self-registration enabled
+ - private comments to specific peers enabled
 31 January 2024:
  - more flexibility in peer grading process
  - decoupling of setting up a peer grading campaign from carrying out a campaign
